# flail

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build-e2fs.sh
flail/: Cargo.toml
flail/fixtures/: hello-world.ext4
flail/src/ext/: block.rs  facade.rs  file.rs  inode.rs  io.rs  messages.rs  mod.rs
libe2fs-sys/: Cargo.toml  README.md  build-e2fs.sh  build.rs  wrapper.h
libe2fs-sys/src/: lib.rs
