[package]
name = "flail"
description = "flail makes filesystems tolerable."
version = "0.2.37"
edition = "2021"
readme = "../README.md"
license = "Apache-2.0"
repository = "https://github.com/queer/flail"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
bitflags = "2.2.1"
bytemuck = "1.13.1"
byteorder = "1.4.3"
chrono = "0.4.24"
ctor = "0.2.0"
debug-ignore = "1.0.5"
eyre = "0.6.8"
floppy-disk = "0.2.0"
futures = "0.3.28"
getset = "0.1.2"
lazy_static = "1.4.0"
libc = "0.2.144"
libe2fs-sys = { version = "0.2.26", path = "../libe2fs-sys" }
log = "0.4.17"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["sync", "rt-multi-thread"] }
uuid = { version = "1.3.1", features = ["v4", "zerocopy"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
